using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnnoraAnimStrings
{
    internal static string isIdle = "isIdle";
    internal static string isMoving = "isMoving";
    internal static string inAir = "inAir";
    internal static string landed = "landed";
}
